    Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

DISTRIBUTIONS
    Fixed: libpam-mysql package - undefined symbol: make_scrambled_password (bugs affecting all distributions)
    Fixed: libpam-mysql package - possible segfault (bugs affecting all distributions)

FRONTEND
    Added: Datatable for domains, subdomains, domain aliases and DNS resource records (client level)
    Added: Datatable for the file system information table (admin level)
    Added: iMSCP\Crypt library
    Added: iMSCP\Net class - Allow to get list of network devices and IP addresses (stdlib)
    Added: \iMSCP\Json\LazyDecoder class for lazy-decoding of JSON data
    Added: Exclamation icon
    Added: onSendMail event (event triggered each time a mail is sent)
    Added: SPF DNS resource record type (validated as a TXT record) (client level)
    Added: Support for .phtml template files (stdlib)
    Added: torul() function for escaping a string for the URI or Parameter contexts (stdlib)
    Changed: exec() PHP function is no longer disabled for the control panel (master php.ini file)
    Changed: The `type` field cannot longer be changed when editing a DNS resource record (client level)
    Changed: Support for nested MySQL transactions is now emulated using named transaction savepoints (stdlib)
    Fixed: Bruteforce feature still acts even when disabled (lostpassword.php)
    Fixed: Cannot add DKIM/DMARC DNS resource records (client level)
    Fixed: Could not retrieve network devices list under Debian Stretch (testing) - Related to #IP-1525 (admin level)
    Fixed: Customer must be allowed to set custom TTL value for any DNS resource record (client level)
    Fixed: Customer must be allowed to set `name` field of any DNS resource record (client level)
    Fixed: Customer PHP permissions not saved when editing customer account (regression fix)
    Fixed: Could not remove database; There is no such grant defined for user... (stdlib)